Tests/Runtime2/Error/Multilingual/.build/catcharabic.pr
{
  "name": "CatchArabic",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtArabic% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtArabic%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/Multilingual/CatchArabic.goal",
  "prPath": "/Tests/Runtime2/Error/Multilingual/.build/catcharabic.pr",
  "hash": "64dc901c857473f38e7ff10967d149b8f277a68d993a14db776d641cbd649e86",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}